--- a/main.html
+++ b/main.html
@@ -1227,7 +1227,10 @@
 			<h4>Business Card 1</h4>
 			<div>
 				<h5>Front</h5>
-				<div id="businessCard1FrontImage" style="width: 700px; height: 400px; border: 2px solid #000000"></div>
+				<div id="businessCard1FrontImage" title="Business Card 1: Front" style="width: 700px; height: 400px; border: 2px solid #000000">
+					<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+					<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+				</div>
 			</div>
 			<div>
 				<h5>Back</h5>
@@ -1776,6 +1779,8 @@
 	<div class="integration" style="align-items: center;"><img alt="" src="media/socialMediaIcons/tiktok.png" width="25px" height="25px" />&nbsp;&nbsp;TikTok<img alt="" src="media/otherIcons/greenCheck.webp" width="20px" height="20px" style="padding: 0 15px 0 15px; position: absolute; right: 0;" /></div>
 	<div class="integration" style="align-items: center;"><img alt="" src="media/socialMediaIcons/youtube.png" width="25px" height="25px" />&nbsp;&nbsp;YouTube<button id="connectToYoutubeButton" onmouseleave="document.getElementById('connectToYoutubeButton').style.backgroundColor = '#3c5eab'" onmouseover="document.getElementById('connectToYoutubeButton').style.backgroundColor = '#2f2f9a'" style="border-radius: 30px; padding: 0 25px 0 25px; margin: 0 15px 0 15px; position: absolute; right: 0; background-color: #3c5eab; color: #fff;" onclick="confirm('Do you want to connect to YouTube?')">Connect</button></div>
 </div>
+
+<div id="popup" style="height: 300px; width: 300px; background-color: #5d5d5d"></div>
 
 </body>
 </html>
