--- a/main.html
+++ b/main.html
@@ -75,15 +75,12 @@
 <body>
 
 <!-- Nav Bar -->
-<div id="navBar" style="height: 55px;">
-	<!-- Brand Search -->
-	<div id="brandSearch">
-		<input id="brandSearchInput" class="cleanCursorInput" type="search" placeholder="Search your brand..." list="brandSearchFullList" size="33" oninput="this.size = this.value.length + 7; if (this.size < 33) {this.size = 33}">
-	</div>
-	<text class="navTab" onclick="selectContentType('brand')">Brand</text>
-	<text class="navTab" onclick="selectContentType('content')">Content</text>
-	<text class="navTab" onclick="selectContentType('newContent')">New Content</text>
-	<text class="navTab" onclick="selectContentType('integrations')">Integration</text>
+<div id="navBar" style="height: 55px; display: flex; justify-content: space-around;">
+	<div class="navTab" onclick="selectContentType('brand')">Brand</div>
+	<div class="navTab" onclick="selectContentType('content')">Content</div>
+	<div class="navTab" onclick="selectContentType('newContent')">New Content</div>
+	<div class="navTab" onclick="selectContentType('settings')">Settings</div>
+
 </div>
 
 <!-- Brand Tab -->
@@ -1183,14 +1180,14 @@
 			<h4>Facebook</h4>
 			<div id="facebookBannerImage" title="Facebook Banner" style="width: 820px; height: 312px; border: 2px solid #000000">
 				<div id="facebookBannerLogoSafeArea" style="color: white; background-color: #5d5d5d; width: 369px; height: 190px; border-top: 2px solid #000000; border-right: 2px solid #000000; position: relative; top: 120px; left: 0;">Logo safe area</div>
-				<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+				<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 			</div>
 		</div>
 		<div>
 			<h4>LinkedIn</h4>
 			<div id="linkedinBannerImage" title="LinkedIn Banner" style="width: 1128px; height: 191px; border: 2px solid #000000">
 				<div id="linkedinBannerLogoSafeArea" style="color: white; background-color: #5d5d5d; width: 203px; height: 114px; border-top: 2px solid #000000; border-right: 2px solid #000000; position: relative; top: 73px; left: 0;">Logo safe area</div>
-				<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+				<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 			</div>
 		</div>
 		<div>
@@ -1199,14 +1196,14 @@
 				<div id="twitterBannerNotchSafArea" style="color: white; background-color: #5d5d5d; width: 1496px; height: 125px; border-bottom: 2px solid #000000; position: relative; top: 0;">Notch safe area</div>
 				<div id="twitterBannerMobileNavLeftSafeArea" style="color: white; background-color: #5d5d5d; width: 300px; height: 175px; border-right: 2px solid #000000; position: relative; top: 0; left: 0;">Mobile nav left safe area (same area on right side, but we are having issues blocking off that space like we did here on the left side.)</div>
 				<div id="twitterBannerLogoSafeArea" style="color: white; background-color: #5d5d5d; width: 450px; height: 198px; border-top: 2px solid #000000; border-right: 2px solid #000000; position: relative; top: 0; left: 0;">Logo safe area</div>
-				<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+				<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 			</div>
 		</div>
 		<div>
 			<h4>YouTube</h4>
 			<div id="youtubeBannerImage" title="YouTube Banner" style="width: 2048px; height: 326px; border: 2px solid #000000">
 				<div id="youtubeBannerSocialLinksSafeArea" style="color: white; background-color: #5d5d5d; width: 326px; height: 80px; border-top: 2px solid #000000; border-left: 2px solid #000000; position: relative; top: 244px; left: 1720px;">Social links safe area</div>
-				<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+				<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 			</div>
 		</div>
 	</div>
@@ -1219,13 +1216,13 @@
 			<div>
 				<h5>Front</h5>
 				<div id="businessCard1FrontImage" title="Business Card 1: Front" style="width: 700px; height: 400px; border: 2px solid #000000">
-					<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+					<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 				</div>
 			</div>
 			<div>
 				<h5>Back</h5>
 				<div id="businessCard1BackImage" title="Business Card 1: Back" style="width: 700px; height: 400px; border: 2px solid #000000">
-					<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+					<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 				</div>
 			</div>
 		</div>
@@ -1237,7 +1234,7 @@
 		<div>
 			<h4>Letter Head 1</h4>
 			<div id="letterHead1" title="Letter Head 1" style="width: 816px; height: 1056px; border: 2px solid #000000">
-				<img class="contentVar:Icon" alt="" src="media/brandwieldLogos/squareLogo.png"/>
+				<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 			</div>
 		</div>
 	</div>
@@ -1546,6 +1543,7 @@
 				</p>
 				<span style="user-select: none; position: relative; top: -15px; left: 8px; background-color: #fff; border: 9px solid #fff; color: #b2b2b2;">editable</span><br>
 				<button class="copyTextButton" onclick="downloadContent();">Download Content</button>
+				<button class="copyTextButton" onclick="emailContent();">Copy Content</button>
 				<div id="output"></div>
 			</div>
 
@@ -1762,8 +1760,8 @@
 </div>
 
 <!-- Integrations Tab -->
-<div id="integrations" class="tabby">
-<h2>My Integrations</h2>
+<div id="settings" class="tabby">
+<h2>Settings</h2>
 	<div class="integration" style="align-items: center;"><img alt="" src="media/socialMediaIcons/facebook.png" width="25px" height="25px" />&nbsp;&nbsp;Facebook<img alt="" src="media/otherIcons/greenCheck.webp" width="20px" height="20px" style="padding: 0 15px 0 15px; position: absolute; right: 0;" /></div>
 	<div class="integration" style="align-items: center;"><img alt="" src="media/socialMediaIcons/instagram.png" width="25px" height="25px" />&nbsp;&nbsp;Instagram<button id="connectToInstagramButton" onmouseleave="document.getElementById('connectToInstagramButton').style.backgroundColor = '#3c5eab'" onmouseover="document.getElementById('connectToInstagramButton').style.backgroundColor = '#2f2f9a'" style="border-radius: 30px; padding: 0 25px 0 25px; margin: 0 15px 0 15px; position: absolute; right: 0; background-color: #3c5eab; color: #fff;" onclick="confirm('Do you want to connect to Instagram?')">Connect</button></div>
 	<div class="integration" style="align-items: center;"><img alt="" src="media/socialMediaIcons/linkedin.png" width="25px" height="25px" />&nbsp;&nbsp;LinkedIn<img alt="" src="media/otherIcons/greenCheck.webp" width="20px" height="20px" style="padding: 0 15px 0 15px; position: absolute; right: 0;" /></div>
@@ -1772,28 +1770,55 @@
 	<div class="integration" style="align-items: center;"><img alt="" src="media/socialMediaIcons/apple.png" width="25px" height="25px" />&nbsp;&nbsp;Apple<img alt="" src="media/otherIcons/greenCheck.webp" width="20px" height="20px" style="padding: 0 15px 0 15px; position: absolute; right: 0;" /></div>
 	<div class="integration" style="align-items: center;"><img alt="" src="media/socialMediaIcons/tiktok.png" width="25px" height="25px" />&nbsp;&nbsp;TikTok<img alt="" src="media/otherIcons/greenCheck.webp" width="20px" height="20px" style="padding: 0 15px 0 15px; position: absolute; right: 0;" /></div>
 	<div class="integration" style="align-items: center;"><img alt="" src="media/socialMediaIcons/youtube.png" width="25px" height="25px" />&nbsp;&nbsp;YouTube<button id="connectToYoutubeButton" onmouseleave="document.getElementById('connectToYoutubeButton').style.backgroundColor = '#3c5eab'" onmouseover="document.getElementById('connectToYoutubeButton').style.backgroundColor = '#2f2f9a'" style="border-radius: 30px; padding: 0 25px 0 25px; margin: 0 15px 0 15px; position: absolute; right: 0; background-color: #3c5eab; color: #fff;" onclick="confirm('Do you want to connect to YouTube?')">Connect</button></div>
+
+	<div class="flex-container">
+		<div class="flex-row">
+			<div class="flex-item">dvi 1</div>
+			<div class="flex-item">div 2</div>
+			<div class="flex-item">div 3</div>
+		</div>
+		<div class="flex-row">
+			<div class="flex-item">div 4</div>
+			<div class="flex-item">dvi 5</div>
+		</div>
+		<div class="flex-column">
+			<div class="flex-item">div 6</div>
+			<div class="flex-item">div 7</div>
+		</div>
+		<div class="flex-column">
+			<div class="flex-item">div 8</div>
+			<div class="flex-item">div 9</div>
+		</div>
+
+
+
+
+
+	</div>
+
+
+
 </div>
 
 <!-- STORAGE -->
-<datalist id="brandSearchFullList">
-	<optgroup id="contactOptGroup" label="Contact"></optgroup>
-	<optgroup id="addressOptGroup" label="Address"></optgroup>
-	<optgroup id="foundingOptGroup" label="Founding"></optgroup>
-	<optgroup id="hoursOfOperationOptGroup" label="Hours of Operation"></optgroup>
-	<optgroup id="basicOptGroup" label="Basic"></optgroup>
-	<optgroup id="socialOptGroup" label="Social"></optgroup>
-	<optgroup id="brandOptGroup" label="Brand"></optgroup>
-	<optgroup id="offeringsOptGroup" label="Offerings"></optgroup>
-	<optgroup id="peopleOptGroup" label="People"></optgroup>
-</datalist>
-<datalist id="brandSearchTypeList">
-	<optgroup id="textOptGroup" label="Text"></optgroup>
-	<optgroup id="dateOptGroup" label="Dates"></optgroup>
-	<optgroup id="colorOptGroup" label="Colors"></optgroup>
-	<optgroup id="urlOptGroup" label="URLs"></optgroup>
-	<optgroup id="telOptGroup" label="Phone Numbers"></optgroup>
-	<optgroup id="emailOptGroup" label="Emails"></optgroup>
-</datalist>
+
+
+<div id="brandSearch">
+	<input id="brandSearchInput" class="cleanCursorInput" type="search" placeholder="Search your brand..." list="valueAll" size="33" oninput="this.size = this.value.length + 7; if (this.size < 33) {this.size = 33}">
+</div>
+
+<!-- All Brand Values -->
+<datalist id="valueAll"></datalist>
+<!-- Value Types -->
+<datalist id="valueTypeText"></datalist>
+<datalist id="valueTypeDate"></datalist>
+<datalist id="valueTypeColor"></datalist>
+<datalist id="valueTypeFont"></datalist>
+<datalist id="valueTypeImage"></datalist>
+<datalist id="valueTypeURL"></datalist>
+<datalist id="valueTypeTel"></datalist>
+<datalist id="valueTypeEmail"></datalist>
+<datalist id="valueTypeAddress"></datalist>
 
 </body>
 </html>
